# internotes

./: .gitignore  Cargo.toml  internotes.db
src/: main.rs  qr.rs  stb_image_write.rs
static/: index.html  index.js  style.css
