[package]
name = "internote"
version = "0.1.0"
edition = "2021"

[dependencies]
r2d2 = "0.8.10"
qrcodegen = "1.8.0"
actix-files = "0.6.6"
r2d2_sqlite = "0.25.0"
serde_json = { version = "=1.0.133" }
serde = { version = "=1.0.216", features = ["derive"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
env_logger = { version = "=0.11.5",  default-features = false }
uuid = { version = "1.11.0", features = ["v4", "serde" ,"fast-rng"] }
derive_more = { version = "1.0.0", features = ["display", "from_str"] }
actix-web = { version = "4.9.0", default-features = false, features = ["http2", "macros"] }
