[package]
name = "internote"
version = "0.1.0"
edition = "2021"

[dependencies]
r2d2 = "0.8.10"
paste = "1.0.15"
dashmap = "6.1.0"
qrcodegen = "1.8.0"
actix-files = "0.6.6"
r2d2_sqlite = "0.25.0"
serde_json = { version = "=1.0.133" }
tokio = { version = "1", features = ["macros"] }
uuid = { version = "1.11.0", features = ["serde"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = { version = "=1.0.216", features = ["rc", "derive"] }
env_logger = { version = "=0.11.5",  default-features = false }
derive_more = { version = "1.0.0", features = ["display", "from_str"] }
actix-web = { version = "4.9.0", default-features = false, features = ["http2", "macros"] }
